@@ -525,38 +525,38 @@ static cptr r_info_flags9[] =
  */
 static cptr t_info_flags[] =
 {
-   "CHEST",
-   "DOOR",
-   "FLOOR",
-   "CHANGE",	// "XXX4",
-   "XXX5",
-   "XXX6",
-   "XXX7",
-   "XXX8",
-   "XXX9",
-   "XXX10",
-   "XXX11",
-   "XXX12",
-   "XXX13",
-   "XXX14",
-   "XXX15",
-   "XXX16",
-   "LEVEL1",
-   "LEVEL2",
-   "LEVEL3",
-   "LEVEL4",
-   "XXX21",
-   "XXX22",
-   "XXX23",
-   "XXX24",
-   "XXX25",
-   "XXX26",
-   "XXX27",
-   "XXX28",
-   "XXX29",
-   "XXX30",
-   "EASY_ID",
-   "NO_ID"
+        "CHEST",
+        "DOOR",
+        "FLOOR",
+        "CHANGE",	// "XXX4",
+        "SPECIAL_GENE",
+        "XXX6",
+        "XXX7",
+        "XXX8",
+        "XXX9",
+        "XXX10",
+        "XXX11",
+        "XXX12",
+        "XXX13",
+        "XXX14",
+        "XXX15",
+        "XXX16",
+        "LEVEL1",
+        "LEVEL2",
+        "LEVEL3",
+        "LEVEL4",
+        "XXX21",
+        "XXX22",
+        "XXX23",
+        "XXX24",
+        "XXX25",
+        "XXX26",
+        "XXX27",
+        "XXX28",
+        "XXX29",
+        "XXX30",
+        "EASY_ID",
+        "NO_ID"
 };
 
 /*
